[package]
name = "typstfmt"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
repository = "https://github.com/jeffa5/typstfmt"
license = "MIT"
exclude = [
    ".envrc",
    ".github",
    ".gitmodules",
    "fuzz",
    "typst-packages",
]

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.0", features = ["derive"] }
globmatch = "0.2.3"
itertools = "0.11.0"
serde = { version = "1.0.168", features = ["derive"] }
similar = "2.2.1"
thiserror = "1.0.43"
toml = "0.8.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
# use a commit just past the typst tagged v0.8.0: https://github.com/typst/typst/issues/2260
typst = { git = "https://github.com/typst/typst.git", rev = "c203eff9f469f263c689f71ac79e3e4c9467e55b" }

[dev-dependencies]
env_logger = "0.10.0"
similar-asserts = "1.4.2"
