[package]
name = "typstfmt"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
repository = "https://github.com/jeffa5/typstfmt"
license = "MIT"
exclude = [
    ".envrc",
    ".github",
    ".gitmodules",
    "fuzz",
    "typst-packages",
]

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.0", features = ["derive"] }
globmatch = "0.2.3"
itertools = "0.11.0"
serde = { version = "1.0.168", features = ["derive"] }
similar = "2.2.1"
thiserror = "1.0.43"
toml = "0.8.6"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
typst = { git = "https://github.com/typst/typst.git", rev = "v0.9.0" }

[dev-dependencies]
env_logger = "0.10.0"
similar-asserts = "1.4.2"
