[package]
name = "typstfmt"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
repository = "https://github.com/jeffa5/typstfmt"
license = "MIT"
exclude = [
    ".envrc",
    ".github",
    ".gitmodules",
    "fuzz",
    "typst-packages",
]

[dependencies]
anyhow = "1.0.89"
clap = { version = "4", features = ["derive"] }
globmatch = "0.3"
serde = { version = "1", features = ["derive"] }
similar = "2"
thiserror = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typst = { git = "https://github.com/typst/typst.git", rev = "v0.11.1" }

[dev-dependencies]
env_logger = "0.11"
similar-asserts = "1"
